Added h2 database and opentelemetry